--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-   
+
 name: Azure Web App Container Deployment
 
 on:
@@ -6,7 +6,7 @@ on:
     branches:
       - main  # Change this to your default branch
 
-jobs: 
+jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
@@ -40,7 +40,7 @@ jobs:
       #     docker push rootzain/shell-java-app:0.0.1.Release
 
       - name: Build Docker Image
-        run: docker build -t monikashanthakumar/shell-java-app:0.0.1.Release .
+        run: docker build -t rootzain/shell-java-app:0.0.1.Release .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -49,7 +49,7 @@ jobs:
             password: ${{ secrets.DOCKER_PASSWORD }}
     
       - name: Push Docker Image
-        run: docker push monikashanthakumar/shell-java-app:0.0.1.Release
+        run: docker push rootzain/shell-java-app:0.0.1.Release
 
       - name: Login to Azure
         uses: azure/login@v1
@@ -60,4 +60,4 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: azure-web-app-shell-java-app
-          images: monikashanthakumar/shell-java-app:0.0.1.Release
+          images: rootzain/shell-java-app:0.0.1.Release
